--- a/menu/style.css
+++ b/menu/style.css
@@ -42,30 +42,15 @@ body{
 }
 
 .hover{
-  animation-name: grow;
-  animation-timing-function: linear;
-  animation-duration: 0.3s;
-  animation-fill-mode: forwards;
+  transition: width 1s;
   border: 2px solid black;
   box-shadow: 0px 10px 25px 2px black;
 }
 
-.hoverOut{
-  animation-name: normal;
-  animation-duration: 0.3s;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
+.hover:hover{
+  width:15vw;
 }
 
-@keyframes grow {
-  0%{transform: scale(1,1); }
-  100%{transform: scale(1.4,1.2); }
-}
-
-@keyframes normal {
-  0%{transform: scale(1.4,1.2); }
-  100%{transform: scale(1,1);}
-}
 
 .pos-2{
   position: relative;
